# Koki

./: .gitignore  Epstein_Transnational_Justice.pptx  Presentation_Script.md  README.md  build_pptx.py  deck.py  make_pdf.py  make_script_pdf.py  minority_report_essay.odt  minority_report_essay.rtf  preview_render.py  render.yaml  render_script_png.py  uber_interview_deck.html
.claude/agents/: deck-builder.md  hono-chan.md
.github/workflows/: affiliate-daily.yml  deploy-case-interview.yml  note-daily.yml  (+1 more)
backend/: Dockerfile  app.py  gmail_client.py  requirements.txt  summarizer.py
essay_assets/: Japan_MinimumWage_Data.xlsx  Japan_Minimum_Wage_Essay.docx  build_essay.py  essay_plain.txt  make_charts.py  make_charts2.py  make_workbook.py
notes/: hono_app_setup.md  hono_memory.md  psychology.md
projects/koki-affiliate/: .gitignore  ASP_GUIDE.md  README.md  config.example.toml  pyproject.toml  seeds.txt
projects/koki-affiliate/content/: ロボット掃除機-おすすめ.json  ロボット掃除機-比較.json  ロボット掃除機-選び方.json
projects/koki-affiliate/src/affiliate/: __init__.py  affiliate.py  cli.py  config.py  generate.py  images.py  keywords.py  llm.py  markdown.py  pipeline.py  render.py  store.py
projects/koki-affiliate/tests/: test_affiliate.py  test_images.py  test_keywords.py  test_llm.py  test_markdown.py  test_pipeline.py  test_store.py
projects/koki-agent/: README.md  pyproject.toml
projects/koki-agent/src/koki/: agent.py  cli.py  db.py  github_sync.py  memory.py  tools.py
projects/koki-agent/tests/: test_memory.py
tests/: test_db.py  test_github_sync.py  test_tools.py
(+84 files in other folders)
